<!--
  ~ Copyright 2017 nsnikhil
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Random No</string>
    <string name="developerEmailAddress" translatable="false">n.nikhil.ns65@gmail.com</string>
    <string name="emailSubject">Feedback for random number generator app</string>

    <string-array name="pagerHeaders">
        <item>Numbers</item>
        <item>Dice Roll</item>
        <item>Coin Toss</item>
    </string-array>

    <!-- prefString-->
    <string name="prefDarkModeTitle">Dark Mode</string>
    <string name="prefDarkModeSummary">Summary</string>

    <string-array name="darkModeEntries">
        <item>Off</item>
        <item>On</item>
        <item>Auto</item>
    </string-array>

    <string name="prefDarkModeKey">prefDarkModeKey</string>
    <!-- prefString-->

    <!-- menu-->
    <string name="menuSettings">Settings</string>
    <string name="menuAbout">About</string>
    <string name="menuSendFeedback">Send Feedback</string>
    <!-- menu-->

    <!--  randomNumber-->
    <string name="randomNumberStart">X</string>
    <string name="randomLowerLimitHint">From</string>
    <string name="randomUpperLimitHint">To</string>
    <string name="randomGenerateRandomNumber">Generate</string>
    <string name="randomResetFields">Reset</string>
    <string name="randomQuantityOfNumbers">Quantity</string>
    <string name="randomGenerateNonRepeatingFlag">Non-Repeating</string>
    <string name="randomGenerateSortedFlag">Sorted</string>

    <string-array name="randomErrorMoreDistinctThanQuantity">
        <item>Its impossible to have</item>
        <item>distinct random no between</item>
        <item>and</item>
    </string-array>

    <string name="randomErrorNoLimit">Specify a range</string>
    <string name="randomErrorLowerLimitOutOfRange">Lower limit out of range</string>
    <string name="randomErrorUpperLimitOutOfRange">Upper limit out of range</string>
    <string name="randomErrorLowerLimitGreaterThanUpper">Lower limit cannot be greater than upper</string>
    <string name="randomErrorQuantityOutOfRange">Quantity should be between 1 – 100</string>

    <!-- randomNumber-->

    <!-- coinToss-->
    <string name="coinHeads">HEADS</string>
    <string name="coinTails">TAILS</string>
    <string name="coinFlip">FLIP</string>
    <!-- -->

    <!-- rollDice-->
    <string name="rollDice">Roll</string>
    <string name="rollDiceQuantityHint">No of dice</string>

    <string name="rollErrorQuantityOutOfRange">Quantity should be between 1 – 100</string>

    <!-- aboutStrings-->
    <string name="aboutApplication">A simple random number generator application with extra functionality.</string>
    <string name="aboutNikhil" translatable="false">Random Number Generator is written by Nikhil Soni\n
                   <a href="https://twitter.com/imnsnik">Twitter</a>|<a href="https://github.com/nsnikhil/">Github</a> </string>
    <string name="aboutSourceCode" translatable="false">The source code is available on <a href="https://github.com/nsnikhil/RandomNo">Github</a></string>

    <string name="aboutLibraries">Third party library used</string>
    <string name="aboutLibrariesHead">Random Number Generator is built with the help of these great libraries</string>
    <string name="aboutLicense">License Info</string>
    <string name="aboutLicenseUrl" translatable="false">https://github.com/nsnikhil/RandomNo/blob/master/LICENSE</string>

</resources>
