<!--
  ~ Copyright 2017 nsnikhil
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/stretchedHorizontally"
    android:padding="@dimen/eight">

    <TextView
        android:id="@+id/aboutApplication"
        style="@style/stretchedHorizontally"
        android:layout_marginTop="@dimen/sixteen"
        android:text="@string/aboutApplication"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/aboutNikhil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutNikhil"
        style="@style/stretchedHorizontally"
        android:layout_marginTop="@dimen/sixteen"
        android:text="@string/aboutNikhil"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/aboutSourceCodeLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutApplication" />

    <TextView
        android:id="@+id/aboutSourceCodeLink"
        style="@style/stretchedHorizontally"
        android:layout_marginTop="@dimen/sixteen"
        android:text="@string/aboutSourceCode"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/aboutLicenseLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutNikhil" />

    <Button
        android:id="@+id/aboutLicenseLink"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen"
        android:text="@string/aboutLicense"
        app:layout_constraintBottom_toTopOf="@id/aboutLibraryLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutSourceCodeLink" />

    <Button
        android:id="@+id/aboutLibraryLink"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutLibraries"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutLicenseLink" />

</androidx.constraintlayout.ConstraintLayout>
